style.css
/* ... */
/* FIX SELECT ICON ALIGNMENT (MOBILE) */
.input-group select {
  padding-left: 46px;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

/* FIX ICON POSITION FOR SELECT */
.input-group select + .input-icon,
.input-group .input-icon {
  top: 50%;
  transform: translateY(-50%);
}

/* EXTRA MOBILE TWEAK */
@media (max-width: 768px) {
  .input-group .input-icon {
    left: 14px;
    font-size: 0.95rem;
  }
}

